# darknet-zeroconf-server

./: .gitignore  .gitmodules  CM_source.cmake  CM_version.cmake  CMakeLists.txt  README.md  build_ubuntu.sh
src-cli/: CMakeLists.txt  SnowflakeGenerator_64.cpp  darknet.cpp  server.cpp
src-lib/: activations.cpp  activations.hpp  art.cpp  cifar.cpp  classifier.cpp  classifier.hpp  coco.cpp  compare.cpp  cost_layer.cpp  cost_layer.hpp  darknet.h  data.cpp  data.hpp  demo.cpp  demo.hpp  detector.cpp  dice.cpp  go.cpp  http_stream.cpp  http_stream.hpp  image.cpp  image.hpp  image_opencv.cpp  image_opencv.hpp  matrix.cpp  matrix.hpp  network.cpp  network.hpp  nightmare.cpp  option_list.cpp  option_list.hpp  parser.cpp  parser.hpp  rnn.cpp  rnn_vid.cpp  super.cpp  tag.cpp  tree.cpp  tree.hpp  utils.cpp  (+4 more)
src-lib/windows/: getopt.h
src-python/: demo_client_to_server.py
src-server/: CMakeLists.txt  Semaphore.hpp  SnowflakeGenerator.hpp  server.cpp  server.hpp
src-server/windows/: darknet_server.rc
